--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<div class="container">
-  <div class="row">
-    <div class="col-6 bg-primary text-center">TEST</div>
-    <div class="col-6 bg-secondary">Ok</div>
-  </div>
-</div>
+<router-outlet></router-outlet>
