push for change branch

--- a/src/app/modules/guest/pages/login/login.component.html
+++ b/src/app/modules/guest/pages/login/login.component.html
@@ -15,11 +15,11 @@
               <div>
                   --------- ou ---------
               </div>
-              <!-- <div class="formGroup">
+              <div class="formGroup">
                   <button type="button" class="btn googleBtn" (click)="authService.GoogleAuth()">
                       <i class="bi bi-google"></i> Log in with Google
                   </button>
-              </div> -->
+              </div>
               <div class="forgotPassword">
                   <span routerLink="/forgot-password">Forgot Password?</span>
               </div>
