push auth firebase (login, sign-up, reset, auth google) + style

--- a/src/app/modules/guest/pages/password-reset/password-reset.component.scss
+++ b/src/app/modules/guest/pages/password-reset/password-reset.component.scss
@@ -19,16 +19,16 @@
         }
       }
     }
+    .iconLock{
+      font-size: 8rem;
+
+    }
     .textInfo{
       color: #8E8E8E;
       font-weight: 600;
       font-size: 15px;
     }
-    .titleCard{
-      font-size: 2rem;
-
-    }
-    .btnSignUp{
+    .btnReset{
       width: 90%;
     }
     .colCard, .colCardSecond{
@@ -39,10 +39,8 @@
         background: white;
       }
     }
-    .Google{
-      button{
-        color: blue;
-      }
+    .createAccount{
+      cursor: pointer;
     }
     .colCardSecond{
       white-space: nowrap;
@@ -52,7 +50,6 @@
     }
   }
   .redirect{
-    color: blue;
     cursor: pointer;
   }
 }
