--- a/src/app/modules/guest/layouts/login/login.component.html
+++ b/src/app/modules/guest/layouts/login/login.component.html
@@ -6,22 +6,32 @@
           <h2 class="titleCard">Instaclo</h2>
         </div>
 
+        <p>
+          AFFICHER UNE POPUP POUR LERREUR
+          {{ errorMessage }}
+        </p>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Enter your email</mat-label>
-          <input matInput placeholder="pat@example.com" [formControl]="email" required>
-          <mat-error *ngIf="email.invalid">{{getErrorMessageEmail()}}</mat-error>
-        </mat-form-field>
+        <form>
+          <mat-form-field appearance="fill">
+            <mat-label>Entrez votre adresse email</mat-label>
+            <input matInput placeholder="pat@example.com" [formControl]="email" required>
+            <mat-error *ngIf="email.invalid">{{getErrorMessageEmail()}}</mat-error>
+          </mat-form-field>
 
-        <mat-form-field appearance="fill">
-          <mat-label>Enter your password</mat-label>
-          <input matInput [type]="hide ? 'password' : 'text'">
-          <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-            <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-          </button>
-        </mat-form-field>
+          <mat-form-field appearance="fill">
+            <mat-label>Entrez votre mot de passe</mat-label>
+            <input matInput [type]="hide ? 'password' : 'text'" [formControl]="password" required>
+            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error *ngIf="password.invalid">{{getErrorPassword()}}</mat-error>
+          </mat-form-field>
 
+          <div class="col-12 mt-2">
+            <button mat-raised-button type="submit" (click)="login()" color="primary">Se connecter</button>
+          </div>
 
+        </form>
 
         <div class="col-12 mt-2">
           ou
