--- a/src/app/modules/guest/layouts/login/login.component.html
+++ b/src/app/modules/guest/layouts/login/login.component.html
@@ -1,57 +1,83 @@
-<div class="h-100 d-flex align-items-center justify-content-center">
+<div class="mainContainer d-flex align-items-center justify-content-center">
   <div class="row text-center mainRow">
-    <div class="colCard col-12 p-3">
-      <div class="row py-4">
-        <div class="col-12 mb-4">
-          <h2 class="titleCard">Instaclo</h2>
-        </div>
-
-        <div class="alert alert-danger" *ngIf="errorMessage" role="alert">
+    <div class="colCard col-12">
+      <div class="my-4 mx-2">
+        <h2 class="titleCard">Instaclo</h2>
+        <div
+          class="alert alert-danger mx-auto"
+          *ngIf="errorMessage !== ''"
+          role="alert"
+        >
+          <i class="bi bi-exclamation-triangle" style="font-size: 1.05rem"></i>
           {{ errorMessage }}
         </div>
-
         <form>
           <mat-form-field appearance="fill">
             <mat-label>Entrez votre adresse email</mat-label>
-            <input matInput placeholder="pat@example.com" [formControl]="email" required>
-            <mat-error *ngIf="email.invalid">{{getErrorMessageEmail()}}</mat-error>
+            <input
+              matInput
+              placeholder="toto@example.com"
+              [formControl]="email"
+              required
+            />
+            <mat-error *ngIf="email.invalid">{{
+              getErrorMessageEmail()
+            }}</mat-error>
           </mat-form-field>
-
-          <mat-form-field appearance="fill">
+          <mat-form-field appearance="fill" class="mt-2">
             <mat-label>Entrez votre mot de passe</mat-label>
-            <input matInput [type]="hide ? 'password' : 'text'" [formControl]="password" required>
-            <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'"
-              [attr.aria-pressed]="hide">
-              <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+            <input
+              matInput
+              [type]="hide ? 'password' : 'text'"
+              [formControl]="password"
+              required
+            />
+            <button
+              mat-icon-button
+              matSuffix
+              (click)="hide = !hide"
+              [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hide"
+            >
+              <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
-            <mat-error *ngIf="password.invalid">{{getErrorPassword()}}</mat-error>
+            <mat-error *ngIf="password.invalid" class="mb-5">{{
+              getErrorPassword()
+            }}</mat-error>
           </mat-form-field>
-
-          <div class="col-12 mt-2">
-            <button mat-raised-button type="submit" (click)="login()" color="primary"
-              [disabled]="password.invalid || email.invalid">Se connecter</button>
-          </div>
-
+          <button
+            class="mt-2 btn btn-primary"
+            type="submit"
+            (click)="login()"
+            color="primary"
+            [disabled]="password.invalid || email.invalid"
+          >
+            Se connecter
+          </button>
         </form>
-
-        <div class="col-12 mt-2">
-          ou
-        </div>
-
-        <div class="col-12 Google mb-3">
+        <p class="mt-3">ou</p>
+        <div class="google mb-3">
           <button type="button" class="btn googleBtn" (click)="googleLogin()">
             <i class="bi bi-google"></i> Se connecter avec Google
           </button>
         </div>
-
-        <div class="forgotPassword">
-          <span class="forgotPassword" routerLink="/password-reset">Mot de passe oublié ?</span>
+        <div>
+          <span class="forgotPassword" routerLink="/password-reset"
+            >Mot de passe oublié ?</span
+          >
         </div>
       </div>
     </div>
     <div class="colCardSecond col-12 mt-3 p-3">
-      <div class="redirectToSignUp">
-        <span>Vous n'avez pas de compte ?<span class="redirect" routerLink="/register"> Inscription</span></span>
+      <div>
+        <span
+          >Vous avez déjà un compte ?<span
+            class="redirect"
+            routerLink="/register"
+          >
+            Inscription</span
+          ></span
+        >
       </div>
     </div>
   </div>
