--- a/src/app/modules/guest/layouts/login/login.component.scss
+++ b/src/app/modules/guest/layouts/login/login.component.scss
@@ -1,56 +1,50 @@
-.h-100{
+.mainContainer {
   background-color: rgb(250, 250, 250);
+  height: 100%;
   overflow: hidden;
-  .mainRow{
+  width: 100%;
+  .mainRow {
     max-width: 350px;
-    .formGroup{
-      border: solid 1px rgb(219, 219, 219);
-      background: rgb(250, 250, 250);
-      border-radius: 3px;
-      width: 90%;
-      input{
-        background: rgb(250, 250, 250) ;
-        border: 0;
-        padding: 8px 0 8px 10px;
-        width: 100%;
-        &:focus{
-          outline: none;
-          border:solid 1px rgb(168,168,168)
-        }
-      }
+    .titleCard {
+      font-size: 2.5rem;
+      margin-top: 50px;
+      margin-bottom: 50px;
     }
-    .titleCard{
-      font-size: 2rem;
-
-    }
-    .btnLogin{
+    .alert{
       width: 90%;
     }
-    .colCard, .colCardSecond{
+    .colCard,
+    .colCardSecond {
       background: rgb(250, 250, 250);
       border: 0;
-      @media  (min-width: 425.98px) {
+      @media (min-width: 425.98px) {
+        border-radius: 5px;
         border: 1px solid rgb(219, 219, 219);
         background: white;
       }
     }
-    .forgotPassword{
+    .forgotPassword {
       cursor: pointer;
     }
-    .Google{
-      button{
+    .google {
+      button {
         color: blue;
       }
     }
-    .colCardSecond{
+    .colCardSecond {
       white-space: nowrap;
-      @media  (max-width: 425.98px) {
+      @media (max-width: 425.98px) {
         font-size: 15px;
+      }
+      .redirect {
+        color: blue;
+        cursor: pointer;
       }
     }
   }
-  .redirect{
-    color: blue;
-    cursor: pointer;
+
+  mat-form-field.mat-form-field {
+    width: 90%;
+    font-size: 13px;
   }
 }
