--- a/src/app/layouts/user-layout/navbar/navbar.component.html
+++ b/src/app/layouts/user-layout/navbar/navbar.component.html
@@ -24,13 +24,15 @@
                 <div class="header-links">
                     <ul class="links d-flex align-items-center mt-3 mt-md-0">
                         <li class="header-link-item d-flex align-items-center" routerLinkActive="active">
-                          <!--TODO add dinamique active-->
-                          <svg class="feather feather-home me-2 icon-md" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" width="24" height="24" viewBox="0 0 32 32">
-                            <g data-name="98-Home">
-                              <path
-                                d="m31.63 12.22-15-12a1 1 0 0 0-1.25 0l-15 12A1 1 0 0 0 1 14h2v17a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1v-9h4v9a1 1 0 0 0 1 1h9a1 1 0 0 0 1-1V14h2a1 1 0 0 0 .63-1.78zM24 12v2h3v16h-7v-9a1 1 0 0 0-1-1h-6a1 1 0 0 0-1 1v9H5V14h3v-2H3.85L16 2.28 28.15 12z" />
-                              <rect x="12" y="11" width="8" height="3" rx="1" ry="1" />
-                            </g>
+                          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 80 90" fill="none" stroke="currentColor"  width="30" height="30" class="feather feather-home me-2 icon-md">
+                            <path fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                              d="M75 85.002C75 87.75 72.75 90 70.001 90H29.999C27.25 90 25 87.75 25 85.002V14.999C25 12.25 27.25 10 29.999 10h40.002C72.75 10 75 12.25 75 14.999v70.003z" />
+                            <path fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                              d="M25 22.5h50v50.003H25z" />
+                            <circle fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round"
+                              stroke-miterlimit="10" cx="50" cy="81.249" r="3.75" />
+                            <path fill="none" stroke="currentColor" stroke-width="4" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                              d="M59.999 81.249H67.5h-7.501zM46.251 16.249h7.499-7.499zM32.5 81.249H40h-7.5z" />
                           </svg>
                             <a [routerLink]="['/user/home']" class="pt-1px d-none d-md-block" href="#">Accueil</a>
                         </li>
@@ -42,17 +44,12 @@
                             <a [routerLink]="['/user/profil']" class="pt-1px d-none d-md-block" href="#">Profil</a>
                         </li>
                         <li class="header-link-item  ms-3 ps-3 border-start d-flex align-items-center" routerLinkActive="active">
-                            <svg class="feather feather-chat me-2 icon-md" xmlns="http://www.w3.org/2000/svg" stroke="currentColor" width="24" height="24" viewBox="0 0 32 32">
-                              <g data-name="18-Mail">
-                                <path
-                                  d="M28 32H4a4 4 0 0 1-4-4V12a4 4 0 0 1 4-4h2a1 1 0 0 1 0 2H4a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h24a2 2 0 0 0 2-2V12a2 2 0 0 0-2-2h-2a1 1 0 0 1 0-2h2a4 4 0 0 1 4 4v16a4 4 0 0 1-4 4z" />
-                                <path
-                                  d="M16 22a1 1 0 0 1-.618-.214l-14-11a1 1 0 1 1 1.236-1.572L16 19.728 29.382 9.214a1 1 0 1 1 1.236 1.572l-14 11A1 1 0 0 1 16 22z" />
-                                <path
-                                  d="M2 31a1 1 0 0 1-.707-1.707l11-11a1 1 0 0 1 1.414 1.414l-11 11A1 1 0 0 1 2 31zM30 31a1 1 0 0 1-.707-.293l-11-11a1 1 0 0 1 1.414-1.414l11 11A1 1 0 0 1 30 31zM26 14a1 1 0 0 1-1-1V2H7v11a1 1 0 0 1-2 0V2a2 2 0 0 1 2-2h18a2 2 0 0 1 2 2v11a1 1 0 0 1-1 1z" />
-                                <path d="M21 7H11a1 1 0 0 1 0-2h10a1 1 0 0 1 0 2zM21.064 12H11a1 1 0 0 1 0-2h10.064a1 1 0 0 1 0 2z" />
-                              </g>
-                            </svg>
+                          <svg version="1.0" xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor"  width="24" height="24" viewBox="0 0 100 100" class="feather feather-chat me-2 icon-md">
+                            <path fill="none" stroke="currentColor" stroke-width="7" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                              d="M34.87 61.382c-4.811 6.008-12.196 9.87-20.493 9.87 4.197-4.193 7.138-9.157 8.903-14.422C15.196 52.021 10 44.592 10 36.249 10 21.751 25.672 10 45.001 10c19.332 0 35 11.751 35 26.249 0 14.5-15.668 26.252-35 26.252-3.523 0-6.923-.393-10.131-1.119z" />
+                            <path fill="none" stroke="currentColor" stroke-width="7" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10"
+                              d="M90 64.999c0-5.162-2.794-9.819-7.295-13.202-7.094 10.805-21.326 18.204-37.704 18.204-1.384 0-2.762-.065-4.133-.169 2.848 8.01 12.558 13.919 24.134 13.919a32.63 32.63 0 0 0 7.235-.803C75.675 87.244 80.948 90 86.874 90a26.264 26.264 0 0 1-6.357-10.302C86.29 76.264 90 70.959 90 64.999z" />
+                          </svg>
                             <a [routerLink]="['/user/chat']" class="pt-1px d-none d-md-block" href="#">Chat <span class="text-muted tx-12">3</span></a>
                         </li>
                         <li class="header-link-item  ms-3 ps-3 border-start d-flex align-items-center" routerLinkActive="active">
