--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,7 @@ $my-typography: mat-typography-config(
 );
 @include mat-core($my-typography);
 
+
 html,
 body {
   height: 100%;
@@ -20,6 +21,31 @@ body {
 a {
   text-decoration: none;
 }
+
+.main {
+  background-color: #FAFAFA;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 100%;
+  width: 100%;
+}
+
+
+@media screen and (min-width: 600px) {
+  .main {
+    width: 90vw;
+  }
+
+}
+
+@media screen and (min-width: 1200px) {
+  .main {
+    width: 85vw;
+  }
+
+}
+
 
 $my-app-accent: mat-palette($mat-pink, 500, 900, A100);
 $my-app-warn: mat-palette($mat-deep-orange);
