--- a/src/app/modules/guest/layouts/login/login.component.html
+++ b/src/app/modules/guest/layouts/login/login.component.html
@@ -11,25 +11,36 @@
           <i class="bi bi-exclamation-triangle" style="font-size: 1.05rem"></i>
           {{ errorMessage }}
         </div>
-        <form>
+        <div
+          class="alert alert-success mx-auto"
+          *ngIf="successMessage !== ''"
+          role="alert"
+        >
+          <i class="bi bi-info-circle" style="font-size: 1.05rem"></i>
+          {{ successMessage }}
+        </div>
+        <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
           <mat-form-field appearance="fill">
             <mat-label>Entrez votre adresse email</mat-label>
             <input
               matInput
               placeholder="toto@example.com"
-              [formControl]="email"
+              formControlName="email"
               required
             />
-            <mat-error *ngIf="email.invalid">{{
-              getErrorMessageEmail()
-            }}</mat-error>
+            <mat-error *ngIf="loginForm.hasError('required', 'email')">
+              Veuillez entrez une adresse mail !
+            </mat-error>
+            <mat-error *ngIf="loginForm.hasError('email', 'email')">
+              Veuillez entrer une adresse valide
+            </mat-error>
           </mat-form-field>
           <mat-form-field appearance="fill" class="mt-2">
             <mat-label>Entrez votre mot de passe</mat-label>
             <input
               matInput
               [type]="hide ? 'password' : 'text'"
-              [formControl]="password"
+              formControlName="password"
               required
             />
             <button
@@ -41,19 +52,16 @@
             >
               <mat-icon>{{ hide ? "visibility_off" : "visibility" }}</mat-icon>
             </button>
-            <mat-error *ngIf="password.invalid" class="mb-5">{{
-              getErrorPassword()
-            }}</mat-error>
+            <mat-error *ngIf="loginForm.hasError('required', 'password')">
+              Veuillez entre un password
+            </mat-error>
+            <mat-error *ngIf="loginForm.hasError('required', 'password')">
+              Le mot de passe doit contenir au moins 8 caractères
+            </mat-error>
           </mat-form-field>
-          <button
-            class="mt-2 btn btn-primary"
-            type="submit"
-            (click)="login()"
-            color="primary"
-            [disabled]="password.invalid || email.invalid"
-          >
-            Se connecter
-          </button>
+          <button mat-raised-button type="submit" color="primary" [disabled]="!loginForm.valid">
+          Se connecter
+        </button>
         </form>
         <p class="mt-3">ou</p>
         <div class="google mb-3">
@@ -70,15 +78,10 @@
     </div>
     <div class="colCardSecond col-12 mt-3 p-3">
       <div>
-        <span
-          >Vous avez déjà un compte ?<span
-            class="redirect"
-            routerLink="/register"
-          >
-            Inscription</span
-          ></span
-        >
-      </div>
+        <span>
+          Vous n'avez pas de compte ?
+          <span class="redirect" routerLink="/register">Inscription</span>
+        </span>
     </div>
   </div>
 </div>
