--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -1,3 +1,30 @@
-<p>
-  profil works!
-</p>
+
+<div class="main">
+  <div class="container">
+    <div class="profile-page tx-13">
+        <div class="row">
+            <div class="col-12 grid-margin">
+                <div class="profile-header">
+                    <div class="cover">
+                        <div class="gray-shade"></div>
+                        <figure>
+                            <img src="https://bootdey.com/img/Content/bg1.jpg" class="img-css" alt="profile cover">
+                        </figure>
+                        <div class="cover-body d-flex justify-content-between align-items-center">
+                            <div>
+                                <img class="profile-pic" src="https://bootdey.com/img/Content/avatar/avatar6.png" alt="profile">
+                                <span class="profile-name">Amiah Burton</span>
+                            </div>
+                            <div class=" d-md-block">
+                                <button class="btn btn-primary btn-icon-text btn-edit-profile">
+                                  qr-code
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+</div>
