Initialisation Profil component

--- a/src/app/modules/user/layouts/profil/profil.component.html
+++ b/src/app/modules/user/layouts/profil/profil.component.html
@@ -1,5 +1,26 @@
 
 <div class="main">
+
+  <div class="profil">
+    <div class="header">
+      <div class="content">
+        <img src="/assets/images/blank-profile.png" alt="image">
+      </div>
+      <div class="description">
+        <p class="pseudo">pseudo</p>
+        <p class="followers">followers </p>
+        <p class="bio">bio</p>
+      </div>
+    </div>
+    <div class="images">
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+      <div class="image"></div>
+
+    </div>
+  </div>
+
   <div class="container">
     <div class="profile-page tx-13">
         <div class="row">
